Fix more tipping QA issues (#1366)
* Fix clipped badge

* Fetch all supporting data for logged in user (until new endpoint for ssender<>receiver exists)

* Fix user list follow icon and font sizes

* Remove confimr tip cta when spinner shows

* Fix styling issues

* Add supporting tile gradient layer

* Refactor gold badge icon image

* Refactor and fix disabled button size

--- a/audius-client/packages/web/src/components/follow-button/FollowButton.module.css
+++ b/audius-client/packages/web/src/components/follow-button/FollowButton.module.css
@@ -19,7 +19,7 @@
 }
 
 .followButton.small .followButtonText {
-  font-size: 11px;
+  font-size: var(--font-m);
   font-weight: var(--font-bold);
   letter-spacing: 0.3px;
 }
